add columns to modal and image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -48,20 +48,92 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>As people who make THINGS, it's easy to be hyper focused on WHAT we make, but that should not be your only concern. WHERE you put what WHAT you make matters just as much.
+        <p><em>Are you a creative entrepreneur? Freelancer? Aspiring creative pro?</em> If so, this podcast was made for you!
 
-        If you put the best restaurant in the worst location, it's going to fail, and the same goes for your art. Where you share your art matters, and in this episode we share ideas on how to get the most out of WHAT you make, by finding the right way to distribute it.
+        Andy J. Miller is passionate about helping creative's strike the perfect balance between art and business.
 
-        CREATIVE SIDE QUEST SERIES FINALE
-        This is part of our Creative Side Quest series. This series is about how to take a side project and add business and marketing strategy to transform it into a Creative Side Quest AKA your secret weapon for developing your creative career!</p>
+        Through ridiculous analogies, personal stories and artist interviews, Andy hopes to help you break free from confusion and make a plan for your creative career success!
+
+        You'll get this and MORE!(the more being Boyz II Men and Fraggle Rock references)
+        </p>
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/488505498&amp;color=%23c4c42f&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Click Here</a></button>
+        <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to PodCast</a></button>
       </div>
     </div>
+  </div> -->
+
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Creative Pep Talk</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-3">IMG</div>
+              <div class="col-md-9 ml-auto">
+                <p><em>Are you a creative entrepreneur? Freelancer? Aspiring creative pro?</em> If so, this podcast was made for you!
+
+                Andy J. Miller is passionate about helping creative's strike the perfect balance between art and business.
+
+                Through ridiculous analogies, personal stories and artist interviews, Andy hopes to help you break free from confusion and make a plan for your creative career success!
+
+                You'll get this and MORE!(the more being Boyz II Men and Fraggle Rock references)
+                </p>
+              </div>
+            </div>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/488505498&amp;color=%23c4c42f&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to PodCast</a></button>
+        </div>
+      </div>
+    </div>
+
+  <!-- <div class="modal-body">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">Put img here</div>
+      <div class="col-md-4 ml-auto"><p><em>Are you a creative entrepreneur? Freelancer? Aspiring creative pro?</em> If so, this podcast was made for you!
+
+      Andy J. Miller is passionate about helping creative's strike the perfect balance between art and business.
+
+      Through ridiculous analogies, personal stories and artist interviews, Andy hopes to help you break free from confusion and make a plan for your creative career success!
+
+      You'll get this and MORE!(the more being Boyz II Men and Fraggle Rock references)
+      </p></div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div> -->
+      <!-- <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
+    </div>
+    <div class="row">
+      <div class="col-sm-9">
+        Level 1: .col-sm-9
+        <div class="row">
+          <div class="col-8 col-sm-6">
+            Level 2: .col-8 .col-sm-6
+          </div>
+          <div class="col-4 col-sm-6">
+            Level 2: .col-4 .col-sm-6
+          </div>
+        </div>
+      </div>
+    </div> -->
   </div>
+</div>
+
 </div>
 </body>
   </div>
