add second modal and iframe

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 
       </div> -->
       <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#creativePepTalk">
   Find Yur Podcast
 </button>
 
 <!-- Modal -->
 
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="creativePepTalk" tabindex="-1" role="dialog" aria-labelledby="creativePepTalkTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Creative Pep Talk</h5>
+          <h5 class="modal-title" id="creativePepTalkTitle">Creative Pep Talk</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -59,6 +59,49 @@
             </div>
           </div>
         <iframe width="100%" height="90" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/488505498&amp;color=%23c4c42f&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+        <!-- </div> -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to PodCast</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#lore">
+  Find Yur Podcast
+</button>
+
+<!-- Modal 2-->
+
+  <div class="modal fade" id="lore" tabindex="-1" role="dialog" aria-labelledby="lore" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="lore">Lore</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-3 ml-auto"><img src="img/lore.jpeg"></div>
+              <div class="col-md-9 ml-auto">
+                <p>Lore is an award-winning, critically-acclaimed podcast about true life scary stories. Lore exposes the darker side of history, exploring the creatures, people, and places of our wildest nightmares.
+
+                Because sometimes the truth is more frightening than fiction.
+
+                Each episode examines a new dark historical tale in a modern campfire experience. With more than 18,700 5-star reviews on Apple Podcasts and over 150-million listens, that's clearly a good thing.
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
+        <iframe width="100%" height="90" scrolling="yes" frameborder="no"  src="http://hwcdn.libsyn.com/p/7/1/8/7189618d58f60751/Lore93.mp3?c_id=22785710&cs_id=22785710&expiration=1535407433&hwt=23303a8f90070e3d7d384acb7fb8dcdd"></iframe>
         <!-- </div> -->
         <div class="modal-footer">
           <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
