--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div> -->
       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#creativePepTalk">
-  Find Yur Podcast
+  Creative Pep Talk Button
 </button>
 
 <!-- Modal -->
@@ -53,24 +53,25 @@
 
                 Andy J. Miller is passionate about helping creative's strike the perfect balance between art and business. Through ridiculous analogies, personal stories and artist interviews, Andy hopes to help you break free from confusion and make a plan for your creative career success!
 
-                You'll get this and MORE!(the more being Boyz II Men and Fraggle Rock references)
+                You'll get this and MORE!(the more being Boyz II Men and Fraggle Rock references). <a href="http://www.creativepeptalk.com" target="_blank">http://www.creativepeptalk.com</a>
                 </p>
               </div>
             </div>
           </div>
-        <iframe width="100%" height="90" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/488505498&amp;color=%23c4c42f&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+        <!-- <iframe width="100%" height="90" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/488505498&amp;color=%23c4c42f&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe> -->
+        <a href="https://itunes.apple.com/us/podcast/196-how-to-break-into-new-territory-side-quest-series-finale/id929743897?i=1000418218805&mt=2" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/podcast-lrg.svg) no-repeat;width:133px;height:34px;background-size:contain;"></a>
         <!-- </div> -->
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to PodCast</a></button>
-        </div>
+          <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to Website</a></button>
+        </div> -->
       </div>
     </div>
   </div>
 </div>
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#lore">
-  Find Yur Podcast
+Lore Button
 </button>
 
 <!-- Modal 2-->
@@ -93,19 +94,19 @@
 
                 Because sometimes the truth is more frightening than fiction.
 
-                Each episode examines a new dark historical tale in a modern campfire experience. With more than 18,700 5-star reviews on Apple Podcasts and over 150-million listens, that's clearly a good thing.
+                Each episode examines a new dark historical tale in a modern campfire experience. With more than 18,700 5-star reviews on Apple Podcasts and over 150-million listens, that's clearly a good thing. <a href="https://www.lorepodcast.com/" target="_blank">https://www.lorepodcast.com/</a>
                 </p>
               </div>
             </div>
           </div>
+<a href="https://itunes.apple.com/us/podcast/episode-93-a-place-to-lay-your-head/id978052928?i=1000418148990&mt=2" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/podcast-lrg.svg) no-repeat;width:133px;height:34px;background-size:contain;"></a>
 
 
-
-        <iframe width="100%" height="90" scrolling="yes" frameborder="no"  src="http://hwcdn.libsyn.com/p/7/1/8/7189618d58f60751/Lore93.mp3?c_id=22785710&cs_id=22785710&expiration=1535407433&hwt=23303a8f90070e3d7d384acb7fb8dcdd"></iframe>
+        <!-- <iframe width="100%" height="90" scrolling="yes" frameborder="no"  src="https://itunes.apple.com/us/podcast/episode-93-a-place-to-lay-your-head/id978052928?i=1000418148990&mt=2"></iframe> -->
         <!-- </div> -->
         <div class="modal-footer">
           <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-outline-secondary"><a href="http://www.creativepeptalk.com">Go to PodCast</a></button>
+          <button type="button" class="btn btn-outline-secondary"><a href="https://www.lorepodcast.com/episodes/">Go to Website</a></button>
         </div>
       </div>
     </div>
