--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/scripts.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <title>Pod Match</title>
 </head>
 <body>
   <div class="container">
+    <div class="foreground">
+      <div class="header">PodCaster</div>
 
 
     <form id="user-input">
@@ -70,13 +72,13 @@
         <label for="firstLabel">I can't be in the same room as pizza, don't talk to me!</label>
         <label for="secondLabel" id="q3RightLabel">Talk to me about sex, politics, death, and other people's money!</label>
         <input type="range" class="custom-range" min="0" max="5" step="1" id="question3">
-        <div class="float-left">
-        </div>
+        <!-- <div class="float-left">
+        </div> -->
       </div>
       <div class="questionFour">
         <div class="form-group">
           <h1>4. How do you feel about being told what to do?</h1>
-          <select class="custom-select" id="question4">
+          <select class="custom-select-lg" id="question4">
             <option selected>Choose from the following:</option>
             <option value="1">I know what others want, need, and desire. People seek high and low for my pearls of wisdom.</option>
             <option value="2">I read horoscopes. They make me feel toilet competent. </option>
@@ -149,25 +151,25 @@
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question8" id="fantasy-answer" value="0" checked>
               <label class="form-check-label" for="fantasy-answer">
-                <img src="" alt="">
+                <img src="img/fantasy1.gif" alt="">
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question8" id="comedy-answer" value="1">
               <label class="form-check-label" for="comedy-answer">
-                <img src="" alt="">
+                <img src="img/cat.gif" alt="gif of cat">
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question8" id="news-answer" value="3">
               <label class="form-check-label" for="news-answer">
-                <img src="" alt="">
+                <img src="img/stewart.gif" alt="">
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="question8" id="educational-answer" value="5">
-              <label class="form-check-label" for="educational-answer">
-                <img src="" alt="">
+              <input class="form-check-input" type="radio" name="question8" id="einstein" value="5">
+              <label class="form-check-label" for="einstein">
+                <img src="img/einstein.gif" alt="gif of Einstein">
               </label>
             </div>
           </div>
@@ -638,7 +640,7 @@
 
 
 
-
+  </div>
   </div> <!--CONTAINER-->
 </body>
 </div>
