--- a/index.html
+++ b/index.html
@@ -41,29 +41,29 @@
         <!-- Picture-based question -->
         <div class="questionTwo">
           <div class="form-group">
-            <h1>2. How do you like to relax or engage?</h1>
+            <h1>2. What activity sounds more appealing to you?</h1>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question2" id="nightmare-answer" value="2A" checked>
               <label class="form-check-label" for="nightmare-answer">
-                With horror movies and nightmarish realities
+                Watching horror movies with nightmarish realities
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question2" id="hilarity-answer" value="2B">
               <label class="form-check-label" for="hilarity-answer">
-                Hilarity, uproar, and nonsense prevail.
+                Indulging in hilarity, uproar, and nonsense
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question2" id="learning-answer" value="2C">
               <label class="form-check-label" for="learning-answer">
-                Learning a new trade, skill, or DIY project.
+                Learning a new trade, skill, or DIY project
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question2" id="stories-answer" value="2D">
               <label class="form-check-label" for="stories-answer">
-                Listening to stories that uplift my chicken soup.
+                Listening to stories that uplift my chicken soup
               </label>
             </div>
           </div>
@@ -82,7 +82,7 @@
       <div class="questionFour">
         <div class="form-group">
           <h1>4. How do you feel about being told what to do?</h1>
-          <select class="custom-select-lg" id="question4">
+          <select class="custom-select-md" id="question4">
             <option selected>Choose from the following:</option>
             <option value="4A">I know what others want, need, and desire. People seek high and low for my pearls of wisdom.</option>
             <option value="4B">I read horoscopes. They make me feel toilet competent. </option>
