scramble answers, add css attributes to button and text

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="questionFour">
         <div class="form-group">
           <h1>4. How do you feel about being told what to do?</h1>
-          <select class="custom-select-md" id="question4">
+          <select class="custom-select" id="question4">
             <option selected>Choose from the following:</option>
             <option value="4A">I know what others want, need, and desire. People seek high and low for my pearls of wisdom.</option>
             <option value="4B">I read horoscopes. They make me feel toilet competent. </option>
@@ -104,17 +104,17 @@
           </div>
           <div class="col-md-3">
             <div class="form-check">
-              <label class="form-check-label" for="katy-perry">
-                <input class="form-check-input" type="radio" name="question5" id="katy-perry" value="5B">
-                <img src="img/katy.jpg" alt="a photo of Katy Perry">
+              <label class="form-check-label" for="michelle-obama">
+                <input class="form-check-input" type="radio" name="question5" id="michelle-obama" value="5C">
+                <img src="img/obama.jpg" alt="An image of Michelle Obama">
               </label>
             </div>
           </div>
           <div class="col-md-3">
             <div class="form-check">
-              <label class="form-check-label" for="michelle-obama">
-                <input class="form-check-input" type="radio" name="question5" id="michelle-obama" value="5C">
-                <img src="img/obama.jpg" alt="An image of Michelle Obama">
+              <label class="form-check-label" for="katy-perry">
+                <input class="form-check-input" type="radio" name="question5" id="katy-perry" value="5B">
+                <img src="img/katy.jpg" alt="a photo of Katy Perry">
               </label>
             </div>
           </div>
@@ -147,19 +147,27 @@
           <h1>7. Click all that interests you:</h1>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck1" value="7A">
-            <label class="custom-control-label" for="customCheck1">Star Wars</label>
+            <label class="custom-control-label" for="customCheck1"><div class="bold">Star Wars</div>
+              <p>Centered on a film series created by George Lucas. It depicts the adventures of characters "A long time ago in a galaxy far, far away".</p>
+            </label>
           </div>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck2" value="7B">
-            <label class="custom-control-label" for="customCheck2">Battle Star Galactica</label>
+            <label class="custom-control-label" for="customCheck2"><div class="bold">Battlestar Galactica</div>
+              <p>When an old enemy, the Cylons, resurface and obliterate the 12 colonies, the crew of the aged Galactica protect a small civilian fleet.</p>
+          </label>
           </div>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck3" value="7C">
-            <label class="custom-control-label" for="customCheck3">Space Force</label>
+            <label class="custom-control-label" for="customCheck3"><div class="bold">Space Force</div>
+              <p>This is not even funny, it's just annoying. Don't.</p>
+            </label>
           </div>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck4" value="7D">
-            <label class="custom-control-label" for="customCheck4">The International Space Station</label>
+            <label class="custom-control-label" for="customCheck4"><div class="bold">The International Space Station</div>
+            <p>The International Space Station is a space station, or a habitable artificial satellite, in low Earth orbit.</p>
+            </label>
           </div>
         </div>
       </div>
@@ -177,9 +185,17 @@
           </div>
           <div class="col-md-3">
             <div class="form-check">
+              <label class="form-check-label" for="einstein">
+                <input class="form-check-input" type="radio" name="question8" id="einstein" value="8D">
+                <img src="img/einstein.gif" alt="gif of Einstein">
+              </label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-check">
               <label class="form-check-label" for="comedy-answer">
                 <input class="form-check-input" type="radio" name="question8" id="comedy-answer" value="8B">
-                <img src="img/cat.gif" alt="gif of cat">
+                <img src="img/dog.gif" alt="gif of cat">
               </label>
             </div>
           </div>
@@ -188,14 +204,6 @@
               <label class="form-check-label" for="news-answer">
                 <input class="form-check-input" type="radio" name="question8" id="news-answer" value="8C">
                 <img src="img/stewart.gif" alt="">
-              </label>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="form-check">
-              <label class="form-check-label" for="einstein">
-                <input class="form-check-input" type="radio" name="question8" id="einstein" value="8D">
-                <img src="img/einstein.gif" alt="gif of Einstein">
               </label>
             </div>
           </div>
@@ -491,7 +499,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="noSuchFish">No Such Fish</h5>
+            <h5 class="modal-title" id="noSuchFish">No Such Thing as a Fish</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -501,7 +509,7 @@
 
               <img src="https://is4-ssl.mzstatic.com/image/thumb/Music91/v4/aa/45/19/aa451911-4fe8-9112-e4d2-1e139810a207/source/400x400bb.jpg">
 
-              <p>A podcast from the QI offices in which the writers of the hit BBC show huddle around a microphone and discuss the best things they've found out this week. Hosted by Dan Schreiber. <a href="https://www.nosuchthingasafish.com/" target="_blank">nosuchthingasafish.com</a>
+              <p>A podcast from the QI offices in which the writers of the hit BBC show huddle around a microphone and discuss the best things they've found out this week. Hosted by Dan Schreiber (@schreiberland) with James Harkin (@jamesharkin), Andrew Hunter Murray (@andrewhunterm), and Anna Ptaszynski (#GetAnnaOnTwitter).<a href="https://www.nosuchthingasafish.com/" target="_blank">nosuchthingasafish.com</a>
               </p>
 
 
@@ -512,7 +520,7 @@
       </div>
     </div>
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#noSuchFish">
-      No Such Fish
+      No Such Thing as a Fish
     </button>
     <!---MODAL 12-->
     <div class="modal fade" id="casketDelights" tabindex="-1" role="dialog" aria-labelledby="casketDelights" aria-hidden="true">
