correct modal title

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="waitWait">Wait Wait</h5>
+            <h5 class="modal-title" id="waitWait">Wait Wait...Don't Tell Me!</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -492,7 +492,7 @@
       </div>
     </div>
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#waitWait">
-      Wait Wait
+      Wait Wait...Don't Tell Me!
     </button>
     <!---MODAL 11-->
     <div class="modal fade" id="noSuchFish" tabindex="-1" role="dialog" aria-labelledby="noSuchFish" aria-hidden="true">
