change color of checkbox

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
           <h1>7. Click all that interests you:</h1>
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck1" value="7A">
-            <label class="custom-control-label" for="customCheck1"><div class="bold">Star Wars</div>
+            <label class="custom-control-label" for="customCheck1">
+            <div class="bold">Star Wars</div>
               <p>Centered on a film series created by George Lucas. It depicts the adventures of characters "A long time ago in a galaxy far, far away".</p>
             </label>
           </div>
@@ -169,7 +170,7 @@
             <p>The International Space Station is a space station, or a habitable artificial satellite, in low Earth orbit.</p>
             </label>
           </div>
-        </div>
+      </div>
       </div>
       <hr />
       <div class="questionEight">
